# esdglider

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  pyproject.toml  setup.py
esdglider/: acoustics.py  config.py  glider.py  imagery.py  plots.py  utils.py
esdglider/data/: deployment-eng-vars.yml  metadata.yml
notebooks/: check-depths.ipynb  check-profiles.ipynb  dbdreader.ipynb  explore-gridded.ipynb  pyglider-socib.ipynb  var-gaps.ipynb
notebooks/glidertools-demo/: Importing glider data.ipynb  Optics.ipynb
notebooks/testing/: stenella-risso.ipynb  testing-compressed.ipynb  testing-folium.ipynb  testing-parallel-plots.py  testing-plots.ipynb
resources/: sync-cache.sh
resources/example-scripts/: database-exp.ipynb
resources/templates/: template_binary_to_nc.sh  template_scrape_sfmc.sh
scripts/: binary-to-nc.py  decompress.py  generate-deployment_yaml.py  generate-website-yaml.py
