[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61", "wheel" ]

[project]
name = "esdglider"
version = "0.4.0-dev0"
description = "Functions for processing ESD glider data"
license = "Apache-2.0"
authors = [
  { name = "Sam Woodman", email = "sam.woodman@noaa.gov" },
  { name = "Caleb Flaim" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "cartopy",
  "cmocean",
  "google-cloud-secret-manager>=2.12",
  "google-crc32c>=1.1",
  "gsw",
  "matplotlib",
  "netcdf4",
  "numpy",
  "pandas",
  "pyglider",
  "pyyaml",
  "xarray",
]

optional-dependencies.imagery = [
  "glidertools",
  "skyfield",
  "timezonefinder",
]
optional-dependencies.db = [
  "sqlalchemy",
]
urls.Homepage = "https://swfsc.github.io/glider-lab-manual"
urls.Issues = "http://github.com/SWFSC/esdglider/issues"
urls.Repository = "http://github.com/SWFSC/esdglider.git"

[tool.setuptools.packages.find]
exclude = [ "tests*", "docs*" ]

[tool.setuptools.package-data]
esdglider = [ "data/*" ]
